[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/general/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/enemies/enemy_new.gd" type="Script" id=2]
[ext_resource path="res://RandomMovementAI.tscn" type="PackedScene" id=3]
[ext_resource path="res://EnemyMovement.gd" type="Script" id=4]
[ext_resource path="res://sprites/animals/movement_base.tres" type="SpriteFrames" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 11.1578

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "deal_damage_to_target"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spit_out_item"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]

[sub_resource type="Animation" id=5]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Enemy" index="0" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="EnemyMovement" parent="." index="0" instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="AnimatedSprite" parent="EnemyMovement" index="0"]
frames = ExtResource( 5 )

[node name="CollisionBox" parent="." index="3"]
self_modulate = Color( 1, 0, 0.92549, 1 )

[node name="Hurtbox" parent="." index="4"]
editor/display_folded = false

[node name="RangeOfSight" parent="." index="5"]
editor/display_folded = false
self_modulate = Color( 0.584314, 0.454902, 0.454902, 1 )
position = Vector2( -32, -32 )

[node name="CollisionShape2D" parent="RangeOfSight" index="0"]
modulate = Color( 0.980392, 1, 0, 0.301961 )

[node name="AttackRange" type="Area2D" parent="." index="6"]
editor/display_folded = true
position = Vector2( 32, -32 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange" index="0"]
modulate = Color( 0, 0, 0, 1 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]
anims/attack = SubResource( 2 )
anims/die = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/spawn = SubResource( 5 )
[connection signal="input_event" from="." to="." method="_on_Enemy_input_event"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="EnemyMovement"]

[editable path="RangeOfSight"]
